# context-builder-mcp

./: README.md  pyproject.toml
context_builder/: __init__.py  __main__.py  context.py  server.py
context_builder/tools/: __init__.py  dev_context.py  file_utils.py  memory.py  prompt_builder.py
