[project]
name = "context-builder"
version = "0.1.0"
description = "Ferramentas para construir contexto otimizado para IA"
requires-python = ">=3.11"

dependencies = [
    "mcp[cli]>=1.4.1",
    "anyio>=4.0.0",
]

[project.scripts]
context-builder = "context_builder.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["context_builder"]
